--- a/Bai_Tap_Ve_Nha_Buoi_2/intro.html
+++ b/Bai_Tap_Ve_Nha_Buoi_2/intro.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Giới Thiệu Bản Thân</title>
+    <title>Nguyễn Minh Thiện</title>
     <link rel="stylesheet" href="intro.css" />
 
     <style>
@@ -33,17 +33,15 @@
     </style>
   </head>
   <body>
-    <strong>
-      Day 2: Bài Tập Về Nhà <br />
-      <ul>
-        <li><a href="index.html">1. Tạo trang hiển thị một bài thơ</a></li>
-        <li><a href="news.html">2. Tạo một bài viết nói về bài thơ trên</a></li>
-        <li>
-          <a href="blog.html">3. Highlight code trong nội dung bài viết</a>
-        </li>
-        <li><a href="intro.html">4. Xây dựng trang giới thiệu bản thân</a></li>
-      </ul>
-    </strong>
+    Day 2: Bài Tập Về Nhà <br />
+    <ul>
+      <li><a href="index.html">1. Tạo trang hiển thị một bài thơ</a></li>
+      <li><a href="news.html">2. Tạo một bài viết nói về bài thơ trên</a></li>
+      <li>
+        <a href="blog.html">3. Highlight code trong nội dung bài viết</a>
+      </li>
+      <li><a href="intro.html">4. Xây dựng trang giới thiệu bản thân</a></li>
+    </ul>
     <header>
       <h1>Nguyễn Minh Thiện</h1>
       <p style="font-size: 1.1em; color: #add8e6">
@@ -56,9 +54,9 @@
         <h2>Giới Thiệu Chung</h2>
         <p>
           Xin chào! Tôi là Nguyễn Minh Thiện, một người đam mê công nghệ và lập
-          trình. Tôi sinh năm 2004, có chiều cao xấp xỉ 187cm và cân nặng khoảng
-          100kg. Tôi luôn tìm kiếm cơ hội học hỏi và phát triển bản thân trong
-          lĩnh vực công nghệ thông tin.
+          trình. Tôi sinh năm 2004, có chiều cao xấp xỉ 187&nbsp;cm và cân nặng
+          khoảng 100&nbsp;kg. Tôi luôn tìm kiếm cơ hội học hỏi và phát triển bản
+          thân trong lĩnh vực công nghệ thông tin.
         </p>
         <p>
           Sở thích của tôi bao gồm đọc sách về khoa học máy tính, chơi game, đá
