--- a/Bai_Tap_Ve_Nha_Buoi_2/news.html
+++ b/Bai_Tap_Ve_Nha_Buoi_2/news.html
@@ -3,20 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Giới thiệu về Bình Ngô Đại Cáo</title>
+    <title>Bình Ngô Đại Cáo - Nguyễn Trãi</title>
   </head>
   <body>
-    <strong>
-      Day 2: Bài Tập Về Nhà <br />
-      <ul>
-        <li><a href="index.html">1. Tạo trang hiển thị một bài thơ</a></li>
-        <li><a href="news.html">2. Tạo một bài viết nói về bài thơ trên</a></li>
-        <li>
-          <a href="blog.html">3. Highlight code trong nội dung bài viết</a>
-        </li>
-        <li><a href="intro.html">4. Xây dựng trang giới thiệu bản thân</a></li>
-      </ul>
-    </strong>
+    Day 2: Bài Tập Về Nhà <br />
+    <ul>
+      <li><a href="index.html">1. Tạo trang hiển thị một bài thơ</a></li>
+      <li><a href="news.html">2. Tạo một bài viết nói về bài thơ trên</a></li>
+      <li>
+        <a href="blog.html">3. Highlight code trong nội dung bài viết</a>
+      </li>
+      <li><a href="intro.html">4. Xây dựng trang giới thiệu bản thân</a></li>
+    </ul>
     <h1>Bình Ngô Đại Cáo - Nguyễn Trãi</h1>
 
     <p>
